# horsekickerpy

./: Dockerfile  app.py  poisson.py  pyproject.toml  setup.py  tox.ini
data/: predict.json
horsekickerpy/: app.py  horsekick.py  wrapper.py
horsekickerpy/tests/: test_horsekick.py
horsekickpy/: horsekick.py
horsekickpy/tests/: test_horsekick.py
results/: horse_kick_model.pkl
