[tool.poetry]
name = "horsekickerpy"
version = "0.1.0"
description = "Predict horse kick deaths at scale."

license = "MIT"

authors = [
    "Matthew Emery <me@matthewemery.ca>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/sdispater/poetry"
homepage = "https://github.com/sdispater/poetry"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.4"  # Compatible python versions must be declared here
toml = "^0.9"

# Python specific dependencies with prereleases allowed
#pathlib2 = { version = "^2.2", python = "~2.7", allows-prereleases = true }
# Git dependencies
#cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

# Optional dependencies (extras)
#pendulum = { version = "^1.4", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
my-script = 'my_package:main'