[tool.poetry]
name = "horsekickerpy"
version = "0.1.0"
description = "Predict horse kick deaths at scale."

license = "MIT"

authors = [
    "Matthew Emery <me@matthewemery.ca>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/lstmemery/horsekickerpy"
homepage = "https://github.com/lstmemery/horsekickerpy"

keywords = ['packaging', 'demo']

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here
toml = "^0.9"

# Python specific dependencies with prereleases allowed
#pathlib2 = { version = "^2.2", python = "~2.7", allows-prereleases = true }
# Git dependencies
#cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

pandas = "^0.24.2"
statsmodels = "^0.9.0"
flask = "^1.0"
cython = "^0.29.7"
scikit-learn = "0.20.3"
patsy = "^0.5.1"
flask_restplus = "^0.12.1"
# Optional dependencies (extras)
#pendulum = { version = "^1.4", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
my-script = 'my_package:main'